# amazon-freertos

./: .gitmodules
demos/common/demo_runner/: aws_demo_runner.c
demos/common/include/: aws_clientcredential.h  aws_clientcredential_keys.h
demos/demo_runner/: aws_demo_network_addr.c  aws_demo_version.c  iot_demo_freertos.c
demos/include/: aws_application_version.h  iot_demo_runner.h
demos/network_manager/: aws_iot_demo_network.c
demos/renesas/: readme.txt
demos/renesas/rx63n-gr-sakura2/ccrx-csplus/: aws_demos.mtpj
demos/renesas/rx63n-gr-sakura2/ccrx-e2studio/: .project
demos/renesas/rx63n-gr-sakura2/gnurx-e2studio/: .project
demos/renesas/rx64m-gr-kaede/ccrx-csplus/: aws_demos.mtpj
demos/renesas/rx64m-gr-kaede/ccrx-e2studio/: .project
demos/renesas/rx64m-gr-kaede/gnurx-e2studio/: .project
demos/renesas/rx65n-cloud-kit-uart-sx-ulpgn/ccrx-csplus/: aws_demos.mtpj
demos/renesas/rx65n-cloud-kit-uart-sx-ulpgn/ccrx-e2studio/: .project
demos/renesas/rx65n-cloud-kit-uart-sx-ulpgn/gnurx-e2studio/: .project
demos/renesas/rx65n-envision-kit/ccrx-csplus/: aws_demos.mtpj
demos/renesas/rx65n-envision-kit/ccrx-e2studio/: .project
demos/renesas/rx65n-envision-kit/gnurx-e2studio/: .project
demos/renesas/rx65n-gr-rose-uart-esp8266/ccrx-e2studio/: .project
demos/renesas/rx65n-gr-rose-uart-esp8266/gnurx-e2studio/: .project
demos/renesas/rx65n-gr-rose/ccrx-csplus/: aws_demos.mtpj
demos/renesas/rx65n-gr-rose/ccrx-e2studio/: .project
demos/renesas/rx65n-gr-rose/gnurx-e2studio/: .project
demos/renesas/rx65n-gr-rose/gnurx-e2studio-cpp/: .project
demos/renesas/rx65n-rsk-uart-sx-ulpgn/ccrx-csplus/: aws_demos.mtpj  aws_demos.scfg
demos/renesas/rx65n-rsk-uart-sx-ulpgn/ccrx-e2studio/: .project  aws_demos.scfg
demos/renesas/rx65n-rsk-uart-sx-ulpgn/gnurx-e2studio/: .project  aws_demos.scfg
demos/renesas/rx65n-rsk/ccrx-csplus/: aws_demos.mtpj  aws_demos.scfg
demos/renesas/rx65n-rsk/ccrx-e2studio/: .cproject  .project  aws_demos.scfg
demos/renesas/rx65n-rsk/gnurx-e2studio/: .project  aws_demos.scfg
demos/renesas/rza2m-ebk/e2studio/: .cproject  .project  aws_demos HardwareDebug.launch  aws_demos.scfg
freertos_kernel/portable/GCC/RX100/: port.c  portmacro.h
freertos_kernel/portable/GCC/RX200/: port.c
freertos_kernel/portable/GCC/RX600/: port.c  portmacro.h
freertos_kernel/portable/GCC/RX600v2/: port.c  portmacro.h
libraries/abstractions/platform/freertos/: iot_network_freertos.c
libraries/abstractions/secure_sockets/test/: iot_test_tcp.c
libraries/abstractions/wifi/include/: iot_wifi.h
libraries/abstractions/wifi/test/: iot_test_wifi.c
libraries/c_sdk/standard/common/: iot_device_metrics.c
projects/renesas/: readme.txt
projects/renesas/rx65n-rsk/e2studio/: CMakeLists.txt
projects/renesas/rx65n-rsk/e2studio/aws_demos/: .cproject  .project  aws_demos HardwareDebug.launch  aws_demos.scfg
projects/renesas/rx65n-rsk/e2studio/aws_tests/: .cproject  .project  aws_tests HardwareDebug.launch
projects/renesas/rx65n-rsk/e2studio/boot_loader/: .cproject  boot_loader HardwareDebug.launch  boot_loader.scfg
projects/renesas/rx65n-rsk/e2studio/boot_loader/src/: boot_loader.c  boot_loader.h
projects/renesas/rx65n-rsk/e2studio/boot_loader/src/key/: code_signer_public_key.h
projects/renesas/rx65n-rsk/e2studio/boot_loader/src/smc_gen/general/: r_cg_hardware_setup.c  r_cg_macrodriver.h  r_cg_userdefine.h  r_smc_cgc.c  r_smc_cgc.h  r_smc_cgc_user.c  r_smc_entry.h  r_smc_interrupt.c  r_smc_interrupt.h
projects/renesas/rx65n-rsk/e2studio/boot_loader/src/smc_gen/r_pincfg/: Pin.c  Pin.h  r_pinset.h  r_sci_rx_pinset.c  r_sci_rx_pinset.h
projects/renesas/rx72n_envision_kit/e2studio/: .project
tests/common/: aws_test_runner.c  iot_tests_network.c
tests/common/secure_sockets/: aws_test_tcp.c
tests/common/test_runner/: aws_test_runner.c
tests/include/: iot_config_common.h
tests/renesas/rx65n-cloud-kit-uart-sx-ulpgn/e2studio/: .cproject  .project
tests/renesas/rx65n-rsk/e2studio/: .cproject  .project  aws_demos.scfg  aws_demos_build_path_check_and_make.bat  aws_tests HardwareDebug.launch  aws_tests_build_path_check_and_make.bat
tests/renesas/rza2m-ebk/e2studio/: .cproject  .project  aws_tests HardwareDebug.launch  aws_tests Release.launch  aws_tests.scfg
tests/renesas/tool/devicetester/: RFP.bat
tests/renesas/tools/devicetester/: build.bat
tools/cmake/toolchains/: cc-rx.cmake
tools/echo_server/: config.json  echo_server.go
tools/idt_scripts/: build.bat  flash.bat
vendors/renesas/: manifest.cmake  release_note.txt
vendors/renesas/amazon_freertos_common/: entropy_hardware_poll.c  freertos_start.c  serial_term_uart.c  serial_term_uart.h
vendors/renesas/boards/rx65n-rsk/: CMakeLists.txt
vendors/renesas/boards/rx_mcu_boards/rx65n-rsk/: CMakeLists.txt
vendors/renesas/boards/rx_mcu_boards/rx65n-rsk/aws_demos/application_code/: main.c
vendors/renesas/boards/rx_mcu_boards/rx65n-rsk/aws_demos/application_code/renesas_code/: main_task.c
vendors/renesas/boards/rx_mcu_boards/rx65n-rsk/aws_tests/application_code/: main.c
vendors/renesas/boards/rx_mcu_boards/rx65n-rsk/aws_tests/config_files/: iot_mqtt_agent_config.h
vendors/renesas/boards/rx_mcu_boards/rx65n-rsk/ports/ota/: aws_ota_pal.c
vendors/renesas/configuration/: 64m_rx_scfg.ftl  65n_rx_scfg.ftl  71m_rx_scfg.ftl  72m_rx_scfg.ftl  72n_rx_scfg.ftl  AWS_kernel_v0.1.8_extend.mdf  AWS_tcp_ip_v0.1.8_extend.mdf  CloudKitRX65N_scfg.ftl  EnvisionRX72N_scfg.ftl  FreeRTOS_Application_v0.1.8_extend.mdf  RSKRX65N_scfg.ftl  afr-202002.00-rx-1.0.2.xml  afr-202002.00-rx-1.0.3.xml  afr-202002.00-rx-1.0.4.xml  afr-202011.00-rx-1.0.0.xml  afr-202012.00-rx-1.0.0.xml  afr-v202002-rx-1.0.0.xml  afr-v202002.00-rx-1.0.1.xml  afr-v202002.00-rx-1.0.2.xml  afr-v202002.00-rx-1.0.4.xml  afr-v202002.00-rx-1.0.5.xml  afr-v202012.00-rx-1.0.0.xml  amazon-freertos-v202002-rx-1.0.0.xml  amazon-freertos-v202002-rx-1.0.1.xml  amazon-freertos-v202002.00-rx-1.0.0.xml  renesas_only.xml  rx_scfg.ftl  rz_scfg.ftl  setting.xml
vendors/renesas/rx_mcu_boards/amazon_freertos_common/: entropy_hardware_poll.c
(+3271 files in other folders)
